--- a/portfolio-app/src/App.css
+++ b/portfolio-app/src/App.css
@@ -1,12 +1,35 @@
 
 *{margin:0; padding:0;}
 
+.all{
+    width: auto;
+    height: auto;
+    background-color: grey;
+}
+
+.circle{
+    display: flex;
+    justify-content: center;
+    padding: 200px;
+}
+
+.profile{
+    display: flex;
+    width: 200px;
+    height: 200px;
+    padding: 20px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px  solid green;
+    justify-content: center;
+    align-items: center;
+}
+
 .navbar{
     display: flex;
     justify-content: space-between;
     background: #4066FA;
     padding: 10px 16px;
-    margin-bottom: 16px;
 }
 
 .navbar-logo{
@@ -20,6 +43,7 @@
     gap: 30px;
     margin: 0;
     align-items: center;
+    font-size: 20px;
 }
 
 .navbar-menu li a{
@@ -27,13 +51,7 @@
     color: white;
 }
 
-.sample-css{
-    background-color: green;
+.github-logo{
     color: white;
-    padding: 20px;
     font-size: 20px;
-}
-
-.call-app-css{
-    background-color: yellow;
 }
