--- a/portfolio-app/src/App.css
+++ b/portfolio-app/src/App.css
@@ -55,3 +55,11 @@
     color: white;
     font-size: 20px;
 }
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+    background: #4066FA;
+    padding: 10px 16px;
+    font-size: 20px;
+}
